# pkgbuild-scripts

./: .gitignore  README.md
aget-rs-git/: PKGBUILD
bcachefs-git/: .SRCINFO  Makefile  PKGBUILD  bcachefs-dkms-git.install  bcachefs-git-dkms.install  dkms.conf  pre-build.sh
cosmic-applet-host/: PKGBUILD
cosmic-applets/: PKGBUILD
cosmic-applibrary/: PKGBUILD
cosmic-comp/: PKGBUILD
cosmic-epoch/: README.md  build.sh
cosmic-epoch/cosmic-applet-host/: PKGBUILD
cosmic-epoch/cosmic-applets/: PKGBUILD
cosmic-epoch/cosmic-applets-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-applibrary/: patch.patch
cosmic-epoch/cosmic-applibrary-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-bg/: PKGBUILD
cosmic-epoch/cosmic-bg-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-comp/: PKGBUILD
cosmic-epoch/cosmic-comp-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-edit-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-epoch-git-meta/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-epoch-meta-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-files-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-greeter-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-launcher/: patch.patch
cosmic-epoch/cosmic-launcher-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-notifications-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-osd/: PKGBUILD
cosmic-epoch/cosmic-osd-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-panel-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-player-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-randr-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-screenshot-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-session/: PKGBUILD
cosmic-epoch/cosmic-session-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-settings-daemon-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-settings-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-store-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-term-git/: .SRCINFO  PKGBUILD
cosmic-epoch/cosmic-text-git/: PKGBUILD
cosmic-epoch/cosmic-theme/: PKGBUILD
cosmic-epoch/cosmic-workspaces-epoch/: PKGBUILD
cosmic-epoch/cosmic-workspaces-epoch-git/: .SRCINFO  PKGBUILD
cosmic-epoch/xdg-desktop-portal-cosmic-git/: .SRCINFO  (+2 more)
cosmic-launcher/: PKGBUILD
cosmic-panel/: PKGBUILD
cosmic-session/: PKGBUILD
ffmpeg-cartwheel/: PKGBUILD
fluffychat/: PKGBUILD  fluffychat.desktop
jhentai-git/: PKGBUILD
lib32-libspeedhack-git/: PKGBUILD
libLC3plus/: CMakeLists.txt  LC3plus.pc.in  PKGBUILD
linux-can-dkms/: .SRCINFO  PKGBUILD  dkms.conf  linux-can-dkms.install
neko-launcher-git/: PKGBUILD  README.md
xe-dkms/: .SRCINFO  Makefile  PKGBUILD  dkms.conf  linux-xe-git.install
(+2 files in other folders)
